# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/actions/prepare-env/: action.yaml
.github/workflows/: deploy.yaml  pull-request.yaml
src/ticket_price_api/: airport_coords.csv  main.py  model.py  schemas.py
